fixed #359: add shadow to X. align the alert message and action buttons

--- a/app/assets/stylesheets/sections/user_page_home.sass
+++ b/app/assets/stylesheets/sections/user_page_home.sass
@@ -2,13 +2,21 @@
 .home-header
   @include sidebar-separator 
   margin: 0 0 18px
-  padding-bottom: 12px
+  padding-bottom: 28px
   position: relative
+  vertical-align: middle
   .alert
     float: left
     width: 390px
+    margin-bottom: 0px
+    margin-top: 7px
     a
       text-shadow: none 
+      &.close
+        text-shadow: 0 1px 0 rgba(0,0,0,1)
+  .standard_actions
+    margin-top: 7px
+
 .user_greeting.span4
   float: left
   margin-left: 0
@@ -17,7 +25,7 @@
   h3
     line-height: 40px
     float: left
-    margin: 0 0 0 15px
+    margin: 7px 0 0 15px
     width: 150px
     font-size: 30px
 .home-index
